migdb.qvto/transforms/tests/errors/errors_moveProperty1b.qvto
import builder_errors;
modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";

transformation errors_addParent1b(out inoutModel : ERR);

main(){
	var notExistClsParentMessage : String := "Structure doesn't contains " +
												"generalClass called Person";
	var notExistClsParentError : EvolutionError := _evolutionError(
													1, 
													notExistClsParentMessage, 
													"evolution_app.qvto");
	var notExistClsAddressMessage : String := "Structure doesn't contains " 
	
	
	
	+
												"standardClass called Address";
	var notExistClsAddressError : EvolutionError := _evolutionError(
													1, 
													notExistClsAddressMessage, 
													"evolution_app.qvto");
													
	_errorLog(OrderedSet{notExistClsParentError, notExistClsAddressError});
}